@@ -1056,6 +1056,21 @@ chinstdir     =
 uninstall     = wxPython#MAJORMINOR_VERSION#-unicode-py25_is1
 uninstparam   = /sp- /silent /norestart
 
+[wxPython Documentation]
+
+category      = Development
+describe      = Documentation for Python GUI library
+website       = http://www.wxpython.org/
+scrape        = http://sourceforge.net/projects/wxpython/download/
+version       = win32-docs-demos-([0-9]\.[0-9]\.[0-9]\.[0-9]).exe
+download      = http://downloads.sourceforge.net/wxpython/
+filename      = wxPython#MAJORMINOR_VERSION#-win32-docs-demos-#VERSION#.exe
+instparam     = /sp- /silent /norestart
+upgrades      = true
+chinstdir     =
+uninstall     = wxPython#MAJORMINOR_VERSION#-docs-demos_is1
+uninstparam   = /sp- /silent /norestart
+
 [XAMPP]
 
 category      = Development
